--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,30 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="title_activity_register">Register</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string-array name="countries">
+        <item>Escoje un país</item>
+        <item>Ecuador</item>
+        <item>Colombia</item>
+        <item>Perú</item>
+        <item>Venezuela</item>
+        <item>Chile</item>
+        <item>Argentina</item>
+        <item>Brasil</item>
+        <item>Uruguay</item>
+        <item>Paraguay</item>
+        <item>Bolivia</item>
+    </string-array>
+
+    <string name="radio_masculino">Masculino</string>
+    <string name="radio_femenino">Femenino</string>
 </resources>
